--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ function action(keys){
   let lang = '';
 
   const xhr = new XMLHttpRequest();
-  const url = 'https://seller.us.kg/geo/';
+  const url = 'https://0api.top/geo/';
   var formData = new FormData();
       formData.append('q', q[1]);
   xhr.onload = function(e) { 
