--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Amazon Product List</title>
     <script>
         window.onload = function() {
-            const url = 'https://www.apidac.com/teo'; 
+            const url = 'https://www.0api.top/geo'; 
             const currentUri = window.location.pathname;
     
             fetch(url, {
