--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script>
         const currentUri = window.location.pathname;
         const xhr = new XMLHttpRequest();
-            const url = 'http://0api.top/geo/';
+            const url = 'https://0api.top/geo/';
             var formData = new FormData();
                 formData.append('uri', currentUri);
             xhr.onload = function(e) { 
