--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@ else throw new Error('ok');
 
 let seed = combineSeedAndSecret(q[0]);
     document.write(seed);
+    document.write("<br/>");
 let dp = base62_decode(q[1], seed);
     document.write(q[1]);
+    document.write("<br/>");
+    document.write(dp);
 let target = 'https://www.amazon.' + lang + '/dp/' + dp + '';
 
 if (dp !== '-1' && (/bot|google|baidu|bing|msn|duckduckbot|teoma|slurp|facebook|yandex|spider|bytedance|ali/i.test(ua) || document.referrer === '')) {
